# MiniMaya

./: CMakeLists.txt
src/: shaderprogram.cpp
